syntax = "proto3";

package proto;

option go_package = "github.com/Mitra-Apps/be-store-service/domain/proto/store;store";

import "google/api/annotations.proto";
import "validate/validate.proto";

message Store {
    string id = 1 [(validate.rules).string = {min_len: 1, max_len: 50}];
    string user_id = 2 [(validate.rules).string = {min_len: 1, max_len: 50}];
    string name = 3 [(validate.rules).string = {min_len: 1, max_len: 100}];
    string address = 4 [(validate.rules).string = {min_len: 1, max_len: 255}];
    string map_location = 5 [(validate.rules).string = {min_len: 1, max_len: 255}];
    string status = 6 [(validate.rules).string = {min_len: 1, max_len: 50}];
    bool is_active = 7;
    string logo_image_id = 8 [(validate.rules).string = {max_len: 255}];
}

message GetStoresRequest {}

message GetStoresResponse {
    repeated Store stores = 1;
}

message GetStoreRequest {
    string id = 1 [(validate.rules).string = {min_len: 1, max_len: 50}];
}

message GetStoreResponse {
    Store store = 1;
}

service StoreService {
    rpc GetStores(GetStoresRequest) returns (GetStoresResponse) {
        option (google.api.http) = {
            get: "/v1/stores"
        };
    }

    rpc GetStore(GetStoreRequest) returns (GetStoreResponse) {
        option (google.api.http) = {
            get: "/v1/stores/{id}"
        };
    }
}